modules/dice/grammar.mjs
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/



  const funcMap = {
    /* Math */
    "**": "pow",
    "%": "mod",

    /* Logic */
    "||": "or",
    "&&": "and",
    "!": "not",

    /* Comparison */
    "=": "eq",
    "==": "eq",
    "===": "eq",
    "!=": "neq",
    "!==": "neq",
    "<": "lt",
    ">": "gt",
    "<=": "lte",
    ">=": "gte",

    /* Bitwise Operations */
    "~": "bitFlip",
    "|": "bitOr",
    "^": "bitXOr",
    "&": "bitAnd",
    "<<": "leftShift",
    ">>": "rightShift",
    ">>>": "unsignedRightShift",

    /* Other */
    "??": "ifNull",
    "ternaryOp": "ifThenElse",
    "?:": "or"
  }

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Term: peg$parseTerm };
  var peg$startRuleFunction = peg$parseTerm;

  var peg$c0 = "?";
  var peg$c1 = ":";
  var peg$c2 = "{";
  var peg$c3 = "}";
  var peg$c4 = "d";
  var peg$c5 = "&";
  var peg$c6 = "|";
  var peg$c7 = "??";
  var peg$c8 = "?:";
  var peg$c9 = "(";
  var peg$c10 = ")";
  var peg$c11 = ",";
  var peg$c12 = "$";
  var peg$c13 = "[";
  var peg$c14 = "]";
  var peg$c15 = ".";
  var peg$c16 = "@";
  var peg$c17 = "*";
  var peg$c18 = "=";
  var peg$c19 = "!";
  var peg$c20 = "^";
  var peg$c21 = "<<";
  var peg$c22 = ">";

  var peg$r0 = /^[a-z]/;
  var peg$r1 = /^[^$]/;
  var peg$r2 = /^[^ (){}[\]$,+\-*%\/]/;
  var peg$r3 = /^[\-+]/;
  var peg$r4 = /^[^ (){}[\]$+\-*\/,]/;
  var peg$r5 = /^[^[\]]/;
  var peg$r6 = /^[a-z_]/i;
  var peg$r7 = /^[a-z0-9_]/i;
  var peg$r8 = /^[0-9]/;
  var peg$r9 = /^[0-9a-z._]/i;
  var peg$r10 = /^[!~]/;
  var peg$r11 = /^[%+\-\/]/;
  var peg$r12 = /^[<>]/;
  var peg$r13 = /^[ ]/;

  var peg$e0 = peg$literalExpectation("?", false);
  var peg$e1 = peg$literalExpectation(":", false);
  var peg$e2 = peg$literalExpectation("{", false);
  var peg$e3 = peg$literalExpectation("}", false);
  var peg$e4 = peg$literalExpectation("d", false);
  var peg$e5 = peg$classExpectation([["a", "z"]], false, false);
  var peg$e6 = peg$literalExpectation("&", false);
  var peg$e7 = peg$literalExpectation("|", false);
  var peg$e8 = peg$literalExpectation("??", false);
  var peg$e9 = peg$literalExpectation("?:", false);
  var peg$e10 = peg$literalExpectation("(", false);
  var peg$e11 = peg$literalExpectation(")", false);
  var peg$e12 = peg$literalExpectation(",", false);
  var peg$e13 = peg$literalExpectation("$", false);
  var peg$e14 = peg$classExpectation(["$"], true, false);
  var peg$e15 = peg$classExpectation([" ", "(", ")", "{", "}", "[", "]", "$", ",", "+", "-", "*", "%", "/"], true, false);
  var peg$e16 = peg$otherExpectation("Sign");
  var peg$e17 = peg$classExpectation(["-", "+"], false, false);
  var peg$e18 = peg$otherExpectation("Roll Modifier");
  var peg$e19 = peg$classExpectation([" ", "(", ")", "{", "}", "[", "]", "$", "+", "-", "*", "/", ","], true, false);
  var peg$e20 = peg$otherExpectation("Roll Flavor");
  var peg$e21 = peg$literalExpectation("[", false);
  var peg$e22 = peg$classExpectation(["[", "]"], true, false);
  var peg$e23 = peg$literalExpectation("]", false);
  var peg$e24 = peg$otherExpectation("Function Name");
  var peg$e25 = peg$classExpectation([["a", "z"], "_"], false, true);
  var peg$e26 = peg$classExpectation([["a", "z"], ["0", "9"], "_"], false, true);
  var peg$e27 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e28 = peg$literalExpectation(".", false);
  var peg$e29 = peg$otherExpectation("Variable");
  var peg$e30 = peg$literalExpectation("@", false);
  var peg$e31 = peg$classExpectation([["0", "9"], ["a", "z"], ".", "_"], false, true);
  var peg$e32 = peg$classExpectation(["!", "~"], false, false);
  var peg$e33 = peg$literalExpectation("*", false);
  var peg$e34 = peg$classExpectation(["%", "+", "-", "/"], false, false);
  var peg$e35 = peg$classExpectation(["<", ">"], false, false);
  var peg$e36 = peg$literalExpectation("=", false);
  var peg$e37 = peg$literalExpectation("!", false);
  var peg$e38 = peg$literalExpectation("^", false);
  var peg$e39 = peg$literalExpectation("<<", false);
  var peg$e40 = peg$literalExpectation(">", false);
  var peg$e41 = peg$otherExpectation("Whitespace");
  var peg$e42 = peg$classExpectation([" "], false, false);

  var peg$f0 = function(ifCase, thenCase, elseCase) {
   return funcMap["ternaryOp"] + "(" + [ifCase, thenCase, elseCase].join(", ") + ")";
};
  var peg$f1 = function(first, tail, mod, flavor) {
  return "{" + tail.reduce((result, element) => {
    return result + ", " + element[3];
  }, first) + "}" + (mod || "") + (flavor || "")
};
  var peg$f2 = function(left, right, mod, flavor) {
  return left + "d" + right + (mod || "") + (flavor || "")
};
  var peg$f3 = function(sign, func, right, mod, flavor) {
  return (sign || "") + "(" + func + ")d" + right + (mod || "") + (flavor || "")
};
  var peg$f4 = function(head, tail) {
  return tail.reduce((result, element) => {
    const func = funcMap[element[0]] || null;
      return func
        ? func + "("+ result + ", " + element[2] + ")"
        : result.trim() + " " + element[0] + " " + element[2];
  }, head);
};
  var peg$f5 = function(head, tail) {
  return tail.reduce((result, element) => {
    const func = funcMap[element[0]] || null;
      return func
        ? func + "("+ result + ", " + element[2] + ")"
        : result.trim() + " " + element[0] + " " + element[2];
  }, head);
};
  var peg$f6 = function(prefixOp, term) {
  return funcMap[prefixOp] + "(" + term + ")"
};
  var peg$f7 = function(sign, term, flavor) {
  return (sign || "") + term + (flavor || "");
};
  var peg$f8 = function(sign, term) {
  return (sign || "") + term;
};
  var peg$f9 = function(sign, term) {
  return (sign || "") + "(" + term + ")"
};
  var peg$f10 = function(func, flavor) {
  return func + (flavor || "");
};
  var peg$f11 = function(sign, func, head, tail) {
  return (sign || "") + func + "(" + tail.reduce((result, element) => {
    return result + ", " + element[3]
  }, head || "") + ")"
};
  var peg$f12 = function(term, flavor) {
	return term + (flavor || "");
};
  var peg$f13 = function(sign, tail) {
  return sign + tail
};
  var peg$f14 = function(sign, tail) {
  return sign + tail
};
  var peg$f15 = function(mod, tail) {
  return mod + (tail || "");
};
  var peg$f16 = function(signs) {
  return signs.reduce((result, element) => {
    return element[0].trim() == "-" ? (result == "+" ? "-" : "+") : result;
  }, "+") == "+" ? "" : "-";
};
  var peg$f17 = function(term, flavor) {
	return term + (flavor || "");
};
  var peg$f18 = function(num) {
  return "0." + num;
};
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseTerm() {
    var s0;

    s0 = peg$parseTernary();
    if (s0 === peg$FAILED) {
      s0 = peg$parseComparisonOperation();
      if (s0 === peg$FAILED) {
        s0 = peg$parseDicePool();
        if (s0 === peg$FAILED) {
          s0 = peg$parseRoll();
          if (s0 === peg$FAILED) {
            s0 = peg$parseFlavoredFunction();
            if (s0 === peg$FAILED) {
              s0 = peg$parseFlavoredNumber();
              if (s0 === peg$FAILED) {
                s0 = peg$parseFlavoredParenthetical();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseString();
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseTernary() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseTernaryFirst();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 63) {
        s4 = peg$c0;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s6 = peg$parseTerm();
        if (s6 !== peg$FAILED) {
          s7 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 58) {
            s8 = peg$c1;
            peg$currPos++;
          } else {
            s8 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e1); }
          }
          if (s8 !== peg$FAILED) {
            s9 = peg$parse_();
            s10 = peg$parseTerm();
            if (s10 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f0(s2, s6, s10);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTernaryFirst() {
    var s0;

    s0 = peg$parseComparisonOperation();
    if (s0 === peg$FAILED) {
      s0 = peg$parseDicePool();
      if (s0 === peg$FAILED) {
        s0 = peg$parseRoll();
        if (s0 === peg$FAILED) {
          s0 = peg$parseFlavoredFunction();
          if (s0 === peg$FAILED) {
            s0 = peg$parseFlavoredNumber();
            if (s0 === peg$FAILED) {
              s0 = peg$parseFlavoredParenthetical();
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseDicePool() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      s1 = peg$c2;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseTerm();
      if (s3 !== peg$FAILED) {
        s4 = [];
        s5 = peg$parseExtraArgs();
        while (s5 !== peg$FAILED) {
          s4.push(s5);
          s5 = peg$parseExtraArgs();
        }
        s5 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 125) {
          s6 = peg$c3;
          peg$currPos++;
        } else {
          s6 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
        if (s6 !== peg$FAILED) {
          s7 = peg$parseModifier();
          if (s7 === peg$FAILED) {
            s7 = null;
          }
          s8 = peg$parseflavor();
          if (s8 === peg$FAILED) {
            s8 = null;
          }
          peg$savedPos = s0;
          s0 = peg$f1(s3, s4, s7, s8);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseRoll() {
    var s0;

    s0 = peg$parseDiceRoll();
    if (s0 === peg$FAILED) {
      s0 = peg$parseFunctionRoll();
    }

    return s0;
  }

  function peg$parseDiceRoll() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseRollTermHand();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 100) {
        s2 = peg$c4;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e4); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseRightRollTermHand();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseModifier();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          s5 = peg$parseflavor();
          if (s5 === peg$FAILED) {
            s5 = null;
          }
          peg$savedPos = s0;
          s0 = peg$f2(s1, s3, s4, s5);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseFunctionRoll() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseSign();
    s3 = peg$parse_();
    s4 = peg$parseFunction();
    if (s4 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 100) {
        s5 = peg$c4;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e4); }
      }
      if (s5 !== peg$FAILED) {
        s6 = peg$parseRightRollTermHand();
        if (s6 !== peg$FAILED) {
          s7 = peg$parseModifier();
          if (s7 === peg$FAILED) {
            s7 = null;
          }
          s8 = peg$parseflavor();
          if (s8 === peg$FAILED) {
            s8 = null;
          }
          peg$savedPos = s0;
          s0 = peg$f3(s2, s4, s6, s7, s8);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseRightRollTermHand() {
    var s0;

    s0 = peg$parseRollTermHand();
    if (s0 === peg$FAILED) {
      s0 = input.charAt(peg$currPos);
      if (peg$r0.test(s0)) {
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
    }

    return s0;
  }

  function peg$parseRollTermHand() {
    var s0;

    s0 = peg$parseNestedParenthetical();
    if (s0 === peg$FAILED) {
      s0 = peg$parseNumerical();
    }

    return s0;
  }

  function peg$parseComparisonOperation() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
